spl2/hn_tests/failing/upper0.hn
foo x = {
	bar y = {
		baz z = sum x z
		baz y
	}
	bar 5
}